Made the text box larger

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 accusamus voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet qui, officiis
                 fugiat eos eaque corrupti magnam quis, commodi aliquam est corporis facere reiciendis at totam
                 recusandae similique voluptatum, facilis vitae.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga, porro placeat quo esse, tempore ratione laborum id, in eos vero exercitationem ullam beatae? Unde illo ratione dolorem iste quos impedit nulla numquam sunt odio placeat, perspiciatis ad reprehenderit consequuntur temporibus quasi, magnam sit consectetur totam! Temporibus iusto quibusdam aspernatur dignissimos eos, aliquam laudantium ut, sed doloremque blanditiis rem iste mollitia eveniet deleniti? Officia natus optio ipsa unde pariatur atque deleniti nisi expedita nobis esse quidem aperiam at perspiciatis illum enim amet tenetur quos iste assumenda odio voluptatem eius, provident dolore eligendi! Tempora odio odit temporibus corrupti ut aliquid fuga!</p>
         </div>
     </section>
 
