--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         </label>
     </div>
     <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contacts</a>
+        <!-- Dynamic Navbar is added here. -->
     </nav>
     <!-- Home Section -->
     <section id="home">
