Changed section id

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="social">
         <h1>Social</h1>
         <div class="social-icons">
             <i class="fab fa-twitter-square"></i>
