Responsive Change: Added Hamburger Menu

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="slider round"></div>
         </label>
     </div>
+    
+    <!-- fa-times -->
+    <i class="fas fa-bars" id="hamburger"></i>
+    
     <nav id="nav">
         <!-- Dynamic Navbar is added here. -->
     </nav>
