Responsive: Fixed buttons and social media icons display

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     <section id="projects">
         <h1>Buttons</h1>
         <div class="buttons">
-            <button class="primary">Primary</button>
-            <button class="secondary">Secondary</button>
-            <button class="primary" disabled>Disabled</button>
-            <button class="secondary outline">Sec Outline</button>
-            <button class="outline" disabled>Outline Disabled</button>
+            <button class="primary display-buttons">Primary</button>
+            <button class="secondary display-buttons">Secondary</button>
+            <button class="primary display-buttons" disabled>Disabled</button>
+            <button class="secondary outline display-buttons">Sec Outline</button>
+            <button class="outline display-buttons" disabled>Outline Disabled</button>
         </div>
         <div class="text-box" id="text-box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam recusandae, debitis dicta
